Added drone, asset for drone and solver for drone EoM

--- a/javascript-2d/index.html
+++ b/javascript-2d/index.html
@@ -6,6 +6,7 @@
     </head>
 
     <script src="init.js"></script>
+    <script src="drone.js"></script>
 
     <body onload="startGame()">
         
