Corrected drone physics and added agent and target classes

--- a/javascript-2d/index.html
+++ b/javascript-2d/index.html
@@ -7,6 +7,8 @@
 
     <script src="init.js"></script>
     <script src="drone.js"></script>
+    <script src="agent.js"></script>
+    <script src="target.js"></script>
 
     <body onload="startGame()">
         
