Basic implementation of evolution algorithm with poorly written code

--- a/javascript-2d/index.html
+++ b/javascript-2d/index.html
@@ -9,6 +9,7 @@
     <script src="drone.js"></script>
     <script src="agent.js"></script>
     <script src="target.js"></script>
+    <script src="evolution.js"></script>
 
     <body onload="startGame()">
         
