Added NeuralNetwork and Layer classes

--- a/javascript-2d/index.html
+++ b/javascript-2d/index.html
@@ -10,6 +10,8 @@
     <script src="agent.js"></script>
     <script src="target.js"></script>
     <script src="evolution.js"></script>
+    <script src="neuralNetwork.js"></script>
+    <script src="layer.js"></script>
 
     <body onload="startGame()">
         
