Basic working implementation of the new classes

--- a/javascript-2d/index.html
+++ b/javascript-2d/index.html
@@ -9,7 +9,7 @@
     <script src="drone.js"></script>
     <script src="agent.js"></script>
     <script src="target.js"></script>
-    <script src="evolution.js"></script>
+    <script src="population.js"></script>
     <script src="neuralNetwork.js"></script>
     <script src="layer.js"></script>
 
