Some random changes everywhere

--- a/javascript-2d/index.html
+++ b/javascript-2d/index.html
@@ -6,12 +6,12 @@
     </head>
 
     <script src="init.js"></script>
-    <script src="drone.js"></script>
-    <script src="agent.js"></script>
-    <script src="target.js"></script>
-    <script src="population.js"></script>
-    <script src="neuralNetwork.js"></script>
-    <script src="layer.js"></script>
+    <script src="./Models/drone.js"></script>
+    <script src="./Models/agent.js"></script>
+    <script src="./Models/target.js"></script>
+    <script src="./Models/population.js"></script>
+    <script src="./AI Models/neuralNetwork.js"></script>
+    <script src="./AI Models/layer.js"></script>
 
     <body onload="startGame()">
         
