--- a/javascript-2d/index.html
+++ b/javascript-2d/index.html
@@ -6,12 +6,15 @@
     </head>
 
     <script src="init.js"></script>
+    <script src="domain.js"></script>
+    <script src="./Assets/assets.js"></script>
     <script src="./Models/drone.js"></script>
     <script src="./Models/agent.js"></script>
     <script src="./Models/target.js"></script>
     <script src="./Models/population.js"></script>
-    <script src="./AI Models/neuralNetwork.js"></script>
-    <script src="./AI Models/layer.js"></script>
+    <script src="./AI Models/NeuralNetwork.js"></script>
+    <script src="./AI Models/Layer.js"></script>
+    <script src="./ai models/LayerInformation.js"></script>
 
     <body onload="startGame()">
         
