Updating css and html to improve layout and add neural network visualisation

--- a/javascript-2d/index.html
+++ b/javascript-2d/index.html
@@ -17,6 +17,48 @@
     <script src="./ai models/LayerInformation.js"></script>
 
     <body onload="startGame()">
-        
+        <div id="container">
+
+        </div>
+
+        <div class="wrapper">
+            <section class="network">
+                <div class="network-row">
+                    <div class="network-node"></div>
+                    <div class="network-node"></div>
+                    <div class="network-node"></div>
+                </div>
+                <div class="network-row">
+                    <div class="network-node"></div>
+                    <div class="network-node"></div>
+                    <div class="network-node"></div>
+                </div>
+                <div class="network-row">
+                    <div class="network-node"></div>
+                    <div class="network-node"></div>
+                    <div class="network-node"></div>
+                </div>
+                <div class="network-row">
+                    <div class="network-node"></div>
+                    <div class="network-node"></div>
+                    <div class="network-node"></div>
+                </div>
+                <div class="network-row">
+                    <div class="network-node"></div>
+                    <div class="network-node"></div>
+                    <div class="network-node"></div>
+                    <div class="network-node"></div>
+                    <div class="network-node"></div>
+                    <div class="network-node"></div>
+                    <div class="network-node"></div>
+                    <div class="network-node"></div>
+                    <div class="network-node"></div>
+                    <div class="network-node"></div>
+                    <div class="network-node"></div>
+                    <div class="network-node"></div>
+                    <div class="network-node"></div>
+                </div>
+            </section>
+        </div>
     </body>
 </html>
