--- a/javascript-2d/index.html
+++ b/javascript-2d/index.html
@@ -22,42 +22,8 @@
         </div>
 
         <div class="wrapper">
-            <section class="network">
-                <div class="network-row">
-                    <div class="network-node"></div>
-                    <div class="network-node"></div>
-                    <div class="network-node"></div>
-                </div>
-                <div class="network-row">
-                    <div class="network-node"></div>
-                    <div class="network-node"></div>
-                    <div class="network-node"></div>
-                </div>
-                <div class="network-row">
-                    <div class="network-node"></div>
-                    <div class="network-node"></div>
-                    <div class="network-node"></div>
-                </div>
-                <div class="network-row">
-                    <div class="network-node"></div>
-                    <div class="network-node"></div>
-                    <div class="network-node"></div>
-                </div>
-                <div class="network-row">
-                    <div class="network-node"></div>
-                    <div class="network-node"></div>
-                    <div class="network-node"></div>
-                    <div class="network-node"></div>
-                    <div class="network-node"></div>
-                    <div class="network-node"></div>
-                    <div class="network-node"></div>
-                    <div class="network-node"></div>
-                    <div class="network-node"></div>
-                    <div class="network-node"></div>
-                    <div class="network-node"></div>
-                    <div class="network-node"></div>
-                    <div class="network-node"></div>
-                </div>
+            <section class="network" id="network">
+                
             </section>
         </div>
     </body>
